; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/b43/extr_phy_lp.c_lpphy_table_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/b43/extr_phy_lp.c_lpphy_table_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.b43_wldev = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.b43_wldev*)* @lpphy_table_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lpphy_table_init(%struct.b43_wldev* %0) #0 {
  %2 = alloca %struct.b43_wldev*, align 8
  %3 = alloca i32, align 4
  store %struct.b43_wldev* %0, %struct.b43_wldev** %2, align 8
  %4 = load %struct.b43_wldev*, %struct.b43_wldev** %2, align 8
  %5 = call i32 @b43_lpphy_op_get_default_chan(%struct.b43_wldev* %4)
  %6 = call i32 @channel2freq_lp(i32 %5)
  store i32 %6, i32* %3, align 4
  %7 = load %struct.b43_wldev*, %struct.b43_wldev** %2, align 8
  %8 = getelementptr inbounds %struct.b43_wldev, %struct.b43_wldev* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = icmp slt i32 %10, 2
  br i1 %11, label %12, label %15

12:                                               ; preds = %1
  %13 = load %struct.b43_wldev*, %struct.b43_wldev** %2, align 8
  %14 = call i32 @lpphy_rev0_1_table_init(%struct.b43_wldev* %13)
  br label %18

15:                                               ; preds = %1
  %16 = load %struct.b43_wldev*, %struct.b43_wldev** %2, align 8
  %17 = call i32 @lpphy_rev2plus_table_init(%struct.b43_wldev* %16)
  br label %18

18:                                               ; preds = %15, %12
  %19 = load %struct.b43_wldev*, %struct.b43_wldev** %2, align 8
  %20 = call i32 @lpphy_init_tx_gain_table(%struct.b43_wldev* %19)
  %21 = load %struct.b43_wldev*, %struct.b43_wldev** %2, align 8
  %22 = getelementptr inbounds %struct.b43_wldev, %struct.b43_wldev* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = icmp slt i32 %24, 2
  br i1 %25, label %26, label %30

26:                                               ; preds = %18
  %27 = load %struct.b43_wldev*, %struct.b43_wldev** %2, align 8
  %28 = load i32, i32* %3, align 4
  %29 = call i32 @lpphy_adjust_gain_table(%struct.b43_wldev* %27, i32 %28)
  br label %30

30:                                               ; preds = %26, %18
  ret void
}

declare dso_local i32 @channel2freq_lp(i32) #1

declare dso_local i32 @b43_lpphy_op_get_default_chan(%struct.b43_wldev*) #1

declare dso_local i32 @lpphy_rev0_1_table_init(%struct.b43_wldev*) #1

declare dso_local i32 @lpphy_rev2plus_table_init(%struct.b43_wldev*) #1

declare dso_local i32 @lpphy_init_tx_gain_table(%struct.b43_wldev*) #1

declare dso_local i32 @lpphy_adjust_gain_table(%struct.b43_wldev*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
